# http

./: Cargo.toml  flake.nix  proxy.md
benches/: bench.rs
benches/incoming/: Cargo.toml
benches/incoming/src/: lib.rs
crates/incoming-profiler-nats/: Cargo.toml
crates/incoming-profiler-nats-raw/: Cargo.toml
crates/incoming-profiler-nats-raw/src/: main.rs
crates/incoming-profiler-nats-wasm/: Cargo.toml
crates/incoming-profiler-nats-wasm/src/: main.rs
crates/incoming-profiler-nats/src/: main.rs
examples/go/http-outgoing-client/: go.mod  http_outgoing_client.go
examples/go/http-outgoing-client/bindings/wasi/clocks/monotonic_clock/: bindings.wrpc.go
examples/go/http-outgoing-client/bindings/wasi/http/types/: bindings.wrpc.go
examples/go/http-outgoing-client/bindings/wasi/io/streams/: bindings.wrpc.go
examples/go/http-outgoing-client/bindings/wrpc/http/outgoing_handler/: bindings.wrpc.go
examples/go/http-outgoing-client/bindings/wrpc/http/types/: bindings.wrpc.go
examples/go/http-outgoing-client/cmd/http-outgoing-client-nats/: main.go
examples/go/http-outgoing-server/: go.mod  go.sum  http_outgoing_server.go
examples/go/http-outgoing-server/bindings/: server.wrpc.go
examples/go/http-outgoing-server/bindings/exports/wrpc/http/outgoing_handler/: bindings.wrpc.go
examples/go/http-outgoing-server/bindings/wasi/clocks/monotonic_clock/: bindings.wrpc.go
examples/go/http-outgoing-server/bindings/wasi/http/types/: bindings.wrpc.go
examples/go/http-outgoing-server/bindings/wasi/io/error/: bindings.wrpc.go
examples/go/http-outgoing-server/bindings/wasi/io/poll/: bindings.wrpc.go
examples/go/http-outgoing-server/bindings/wasi/io/streams/: bindings.wrpc.go
examples/go/http-outgoing-server/bindings/wrpc/http/types/: bindings.wrpc.go
examples/go/http-outgoing-server/cmd/http-outgoing-server-nats/: main.go
examples/go/http-outgoing-server/wit/: deps.toml
examples/rust/http-incoming-ants-client/: Cargo.toml
examples/rust/http-incoming-ants-client/src/: main.rs
examples/rust/http-incoming-ants-server/: Cargo.toml
examples/rust/http-incoming-ants-server/src/: main.rs
examples/rust/http-incoming-nats-client/: Cargo.toml
examples/rust/http-incoming-nats-client/src/: main.rs
examples/rust/http-incoming-nats-server/: Cargo.toml
examples/rust/http-incoming-nats-server/src/: main.rs
examples/rust/http-incoming-tcp-client/: Cargo.toml
examples/rust/http-incoming-tcp-client/src/: main.rs
examples/rust/http-incoming-tcp-server/: Cargo.toml
examples/rust/http-incoming-tcp-server/src/: main.rs
examples/rust/http-outgoing-nats-client/src/: main.rs
examples/rust/http-outgoing-nats-server/: Cargo.toml
examples/rust/http-outgoing-nats-server/src/: main.rs
src/: lib.rs
tests/: rust.rs
tests/common/: mod.rs
wit/: handler.wit
