[package]
name = "wrpc-interface-http"
version = "0.24.5"
description = "wRPC HTTP interface"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
homepage = "https://github.com/wrpc/http"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wrpc/http"

[workspace]
members = ["examples/rust/*"]

[features]
http = ["dep:http"]
http-body = ["http", "dep:http-body", "dep:http-body-util", "dep:tokio-stream"]
hyper = ["http-body", "dep:hyper"]
wasmtime-wasi-http = ["http-body", "dep:wasmtime-wasi-http"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true, features = ["attributes"] }
wasmtime-wasi-http = { workspace = true, optional = true }
wit-bindgen-wrpc = { workspace = true }
wrpc-transport = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true, features = ["ring"] }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
reqwest = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
wrpc-cli = { workspace = true, features = ["nats"] }
wrpc-interface-http = { workspace = true, features = [
    "http",
    "http-body",
    "hyper",
    "wasmtime-wasi-http",
] }
wrpc-transport-nats = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-nats = { package = "async-nats-wrpc", version = "0.35.1", default-features = false }
bytes = { version = "1", default-features = false }
clap = { version = "4", default-features = false }
futures = { version = "0.3", default-features = false }
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1.2", default-features = false }
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false }
hyper-util = { version = "0.1", default-features = false }
reqwest = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-native-certs = { version = "0.7", default-features = false }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
wasmtime-wasi-http = { version = "22", default-features = false }
webpki-roots = { version = "0.26", default-features = false }
wit-bindgen-wrpc = { version = "0.4.4", default-features = false }
wrpc-cli = { version = "0.2", default-features = false }
wrpc-interface-http = { version = "0", path = ".", default-features = false }
wrpc-transport = { version = "0.26.2", default-features = false }
wrpc-transport-nats = { version = "0.22", default-features = false }
