[package]
name = "incoming-profiler-nats-raw"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true, features = [
    "http1",
    "http2",
    "server",
    "tokio",
] }
pprof = { workspace = true, features = ["cpp", "protobuf-codec"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["io-std", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
url = { workspace = true }
