[package]
name = "http-incoming-ants-client"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ants = { workspace = true }
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
futures = { workspace = true }
http = { workspace = true, features = ["std"] }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true, features = [
    "http1",
    "http2",
    "server",
    "tokio",
] }
tokio = { workspace = true, features = ["io-std", "rt-multi-thread", "signal"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "tracing-log",
] }
wrpc-interface-http = { workspace = true, features = ["http", "hyper"] }
wrpc-transport-ants = { workspace = true }
